Star Icon: Fix vertical align (#6688)

--- a/src/components/modals/stars/StarsBalanceModal.module.scss
+++ b/src/components/modals/stars/StarsBalanceModal.module.scss
@@ -286,6 +286,8 @@
 
 .paymentButtonStar {
   --color-fill: white !important;
+
+  margin-inline-start: 0;
 }
 
 .transactions, .subscriptions {
