--- a/src/components/ui/ModalStarBalanceBar.module.scss
+++ b/src/components/ui/ModalStarBalanceBar.module.scss
@@ -39,9 +39,7 @@
 }
 
 .starIcon {
-  height: 1rem !important;
-  margin-inline-start: 0.125rem !important;
-  line-height: 1rem !important;
+  margin-inline-start: 0 !important;
 }
 
 .tonInUsdDescription {
