--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -358,7 +358,7 @@ body:not(.is-ios) {
   margin-inline-start: 0.375em; // Prevent sticking to the text without using `white-space: pre`
   margin-inline-end: 0.2em; // Prevent sticking to the text without using `white-space: pre`
   line-height: inherit; // Vertical centring
-  vertical-align: text-bottom; // As regular text
+  vertical-align: text-top; // As regular text
 }
 
 .next-arrow-icon {
